# BTE

./: CMakeLists.txt  authenticate.cpp  authenticate.h  backtest.cpp  backtest.h  backtest_engine.cpp  backtest_engine.h  backtest_engine.ui  build-Debug.ninja  build-RelWithDebInfo.ninja  build-Release.ninja  build.ninja  charting.cpp  charting.h  charting.ui  chartingpage.cpp  chartingpage.h  chartingpage.ui  cmake_install.cmake  fetch_data.cpp  fetch_data.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  manage_db.cpp  manage_db.h  menu.cpp  menu.h  universe.csv
.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
